--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,9 +27,7 @@ backup_directories:
   - "{{ home_directory }}/.themes"
   - "{{ home_directory }}/.icons"
   # user config directory backups
-  - "{{ config_directory }}/gtk-2.0"
-  - "{{ config_directory }}/gtk-3.0"
-  - "{{ config_directory }}/gtk-4.0"
+  - "{{ config_directory }}/gtk-*"
   - "{{ config_directory }}/kate"
   - "{{ config_directory }}/Kvantum"
   - "{{ config_directory }}/latte"
@@ -45,9 +43,6 @@ backup_directories:
   - "{{ config_directory }}/ksmserverrc"
   - "{{ config_directory }}/kwinrc"
   - "{{ config_directory }}/kwinrulesrc"
-  - "{{ config_directory }}/plasma-org.kde.plasma.desktop.appletsrc"
-  - "{{ config_directory }}/plasmarc"
-  - "{{ config_directory }}/plasmashellrc"
   - "{{ config_directory }}/gtkrc"
   - "{{ config_directory }}/gtkrc-2.0"
   - "{{ config_directory }}/lattedockrc"
@@ -56,6 +51,8 @@ backup_directories:
   - "{{ config_directory }}/lightlyrc"
   - "{{ config_directory }}/ksplashrc"
   - "{{ config_directory }}/khostkeysrc"
+  - "{{ config_directory }}/konsolesshconfig"
+  - "{{ config_directory }}/plasma*"
   # user share directory backups
   - "{{ share_directory }}/plasma"
   - "{{ share_directory }}/kwin"
@@ -68,6 +65,9 @@ backup_directories:
   # app layout backups
   - "{{ share_directory }}/kxmlgui5/dolphin"
   - "{{ share_directory }}/kxmlgui5/konsole"
+  # misc
+  - "{{ home_directory }}/.kde"
+
 
 additional_directories: []
 override_backup_directories: []
